hot fix: overflow set to hidden + disabled force loading

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,6 +14,12 @@
   }
 }
 
+body {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
 svg {
   width: 150px;
 }
